# nexus-led-scoreboard

./: .gitignore  LICENSE  README.md  config_example.json  configure.py  main.py  pyproject.toml  references.txt  setup.py
.github/workflows/: ci.yml
config/: config.json
src/nexus_led_scoreboard/: logger.py  main.py  scoreboard_manager.py
src/nexus_led_scoreboard/data/: data_fetcher.py  data_parser.py
src/nexus_led_scoreboard/data/cache/: teams_baseball_mlb_limit-1000.json  teams_football_nfl_limit-1000.json  teams_soccer_eng.1_limit-1000.json  teams_soccer_eng.2_limit-1000.json  teams_soccer_usa.1_limit-1000.json
tests/: test_example.py  test_main.py
