[project]
name = "nexus-led-scoreboard"
version = "0.1.0"
description = "A multi-sport LED scoreboard project for real-time data display."
authors = [
    { name = "peteywhit", email = "peteywhit@outlook.com" },
]
dependencies = [
    # Add your core project dependencies here as you identify them, e.g.:
    # "requests>=2.28",
    # "mlb-statsapi", # You'll likely need to find/add specific sport APIs later
    "rpi-rgb-led-matrix", # Hardware specific, might be installed separately
]
requires-python = ">=3.8" # Or your desired minimum Python version
license = { text = "MIT" }
readme = "README.md"
keywords = ["scoreboard", "LED", "multi-sport", "raspberry-pi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Home Automation",
    "Topic :: Games/Entertainment :: Sports",
]

[project.urls]
Homepage = "https://github.com/peteywhit/nexus-led-scoreboard" # Update later
Repository = "https://github.com/peteywhit/nexus-led-scoreboard" # Update later
Issues = "https://github.com/peteywhit/nexus-led-scoreboard/issues" # Update later

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"} # This tells setuptools your code is in 'src/'