[project]
name = "nexus-led-scoreboard"
version = "0.1.0"
description = "A multi-sport LED scoreboard project for real-time data display."
authors = [
    { name = "peteywhit", email = "peteywhit@outlook.com" },
]
dependencies = [
    "requests>=2.28.1", # For making HTTP requests to APIs
    "questionary>=1.10.0", # For interactive user prompts in setup
    "python-dotenv>=1.0.0"
    # Add core project dependencies here as they are identified.
]
requires-python = ">=3.8"
license = { text = "MIT" }
readme = "README.md"
keywords = ["scoreboard", "LED", "multi-sport", "raspberry-pi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Home Automation",
    "Topic :: Games/Entertainment :: Sports",
]

[project.urls]
Homepage = "https://github.com/peteywhit/nexus-led-scoreboard"
Repository = "https://github.com/peteywhit/nexus-led-scoreboard"
Issues = "https://github.com/peteywhit/nexus-led-scoreboard/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]